syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

// Unary Messages
message Sum {
    int32 int_one = 1;
    int32 int_two = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

// PrimeNumberDecompositionRequest used in Server Streaming gRPC call
message PrimeNumberDecompositionRequest{
    int64 number = 1;
}

// PrimeNumberDecompositionResponse used in Server Streaming gRPC response
message PrimeNumberDecompositionResponse{
    int64 prime_factor = 1;
}

// ComputeAverageRequest use in Client Streaming gRPC call
message ComputeAverageRequest{
    int32 number = 1;
}

// ComputeAverageResponse used in Client Streaming gRPC response
message ComputeAverageResponse{
    double result = 1;
}

// FindMaximumRequest used in Bi-directional Streaming gRPC call
message FindMaximumRequest{
    int32 number = 1;
}

// FindMaximumResponse used in Bi-directional Streaming gRPC response
message FindMaximumResponse{
    int32 result = 1;
}

// SquareRootRequest used in Unary example with Error Handling gRPC call
message SquareRootRequest{
    int32 number = 1;
}

// SquareRootResponse used in Unary example with Error Handling gRPC response
message SquareRootResponse{
    double number_root = 1;
}

// Calculator Services (all transfer types)
service CalculatorService{
    // Basic gRPC Service Examples
    // Unary Example
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Server Streaming Example
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    // Client Streaming Example
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // Bidirectional Example
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // Advanced gRPC Service Examples
    // Unary Example
    // Error Handling - INVALID_ARGUEMENT - this RPC will throw an exception if the number sent is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};

}